--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,11 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+outputs/
+outputss/
+outputssss/
+/ffddd.ipynb
+
 # PyCharm
 #  JetBrains specific template is maintainted in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
